--- a/src/elements/guuey-slider/guuey-slider.html
+++ b/src/elements/guuey-slider/guuey-slider.html
@@ -1,25 +1,32 @@
 <link rel="import" href="../../../bower_components/polymer/polymer.html" />
 <link rel="import" href="../../../bower_components/paper-slider/paper-slider.html" />
 
+<!--
+`guuey-slider` uses paper-slider to add in specific styles indication risk levels through colors of the slider bar and optional text
+@demo demo/index.html
+-->
+
 <dom-module id="guuey-slider">
 
   <template>
 
     <style>
-      :host{
+      :host {
         display:block;
         padding-bottom:20px;
         width:100%;
       }
+
       .sliderContainer{
         display:flex;
         flex-direction:row;
       }
-      .innerContainer{
+      .innerContainer {
         position:relative;
         flex-grow:1;
       }
-      .dangerLabel{
+
+      .dangerLabel {
         color:blue;
         color:var(--danger-label-color);
         text-transform:uppercase;
@@ -28,7 +35,8 @@
         align-self: center;
         padding:0 0 15px 10px;
       }
-      #slider{
+
+      #slider {
         margin:0;
         padding:0;
         align-self: center;
@@ -37,28 +45,33 @@
         padding-bottom:15px;
         --paper-slider-markers-color:transparent;
       }
-      #slider::shadow #sliderContainer{
+
+      #slider::shadow #sliderContainer {
         margin-left:0;
         margin-right:0;
       }
-      .spectrumDescriptor{
+
+      .spectrumDescriptor {
         text-transform:uppercase;
         margin:0;
         padding:0;
         font-size:10px;
       }
-      #noRisk{
+
+      #noRisk {
         position:absolute;
         bottom:5px;
         left:17px;
         opacity:.8;
       }
-      #danger{
+
+      #danger {
         position:absolute;
         bottom:5px;
         right:17px;
         opacity:.8;
       }
+
     </style>
 
       <div class="sliderContainer">
@@ -83,103 +96,109 @@
     Polymer({
 
       is: 'guuey-slider',
-      ready:function(){
+
+      ready: function() {
         this.addEventListener("immediate-value-change", this.updateSliderColor);
       },
-      properties:{
-        value:{
-          type:Number,
-          notify:true
+
+      properties: {
+
+        //the value to be returned from 1 to 3
+        value: {
+          type: Number,
+          notify: true
         },
-        hideValue:{
-          type:Boolean,
-          value:false
-        }
+
       },
+
       observers:[
         "slidercolorChange(value)"
       ],
-      updateSliderColor:function(){
-        switch(this.$.slider.immediateValue){
+
+      updateSliderColor: function() {
+        switch(this.$.slider.immediateValue) {
           case 1:
-            this.customStyle['--paper-slider-active-color']="#43A047";
-            this.customStyle['--paper-slider-knob-color']="#43A047";
-            this.customStyle['--paper-slider-pin-color']="#43A047";
+            this.customStyle['--paper-slider-active-color'] = "#43A047";
+            this.customStyle['--paper-slider-knob-color'] = "#43A047";
+            this.customStyle['--paper-slider-pin-color'] = "#43A047";
             this.updateStyles();
             break;
           case 2:
-            this.customStyle['--paper-slider-active-color']="#F57C00";
-            this.customStyle['--paper-slider-knob-color']="#F57C00";
-            this.customStyle['--paper-slider-pin-color']="#F57C00";
+            this.customStyle['--paper-slider-active-color'] = "#F57C00";
+            this.customStyle['--paper-slider-knob-color'] = "#F57C00";
+            this.customStyle['--paper-slider-pin-color'] = "#F57C00";
             this.updateStyles();
             break;
           case 3:
-            this.customStyle['--paper-slider-active-color']="#E53935";
-            this.customStyle['--paper-slider-knob-color']="#E53935";
-            this.customStyle['--paper-slider-pin-color']="#E53935";
+            this.customStyle['--paper-slider-active-color'] = "#E53935";
+            this.customStyle['--paper-slider-knob-color'] = "#E53935";
+            this.customStyle['--paper-slider-pin-color'] = "#E53935";
             this.updateStyles();
             break;
           default:
-            this.customStyle['--paper-slider-active-color']="#43A047";
-            this.customStyle['--paper-slider-knob-color']="#43A047";
-            this.customStyle['--paper-slider-pin-color']="#43A047";
+            this.customStyle['--paper-slider-active-color'] = "#43A047";
+            this.customStyle['--paper-slider-knob-color'] = "#43A047";
+            this.customStyle['--paper-slider-pin-color'] = "#43A047";
             this.updateStyles();
             break;
         };
       },
-      slidercolorChange:function(val){
-        switch(val){
+
+      slidercolorChange: function(val) {
+        switch(val) {
           case 1:
-            this.customStyle['--paper-slider-active-color']="#43A047";
-            this.customStyle['--paper-slider-knob-color']="#43A047";
-            this.customStyle['--paper-slider-pin-color']="#43A047";
+            this.customStyle['--paper-slider-active-color'] = "#43A047";
+            this.customStyle['--paper-slider-knob-color'] = "#43A047";
+            this.customStyle['--paper-slider-pin-color'] = "#43A047";
             this.updateStyles();
             break;
           case 2:
-            this.customStyle['--paper-slider-active-color']="#F57C00";
-            this.customStyle['--paper-slider-knob-color']="#F57C00";
-            this.customStyle['--paper-slider-pin-color']="#F57C00";
+            this.customStyle['--paper-slider-active-color'] = "#F57C00";
+            this.customStyle['--paper-slider-knob-color'] = "#F57C00";
+            this.customStyle['--paper-slider-pin-color'] = "#F57C00";
             this.updateStyles();
             break;
           case 3:
-            this.customStyle['--paper-slider-active-color']="#E53935";
-            this.customStyle['--paper-slider-knob-color']="#E53935";
-            this.customStyle['--paper-slider-pin-color']="#E53935";
+            this.customStyle['--paper-slider-active-color'] = "#E53935";
+            this.customStyle['--paper-slider-knob-color'] = "#E53935";
+            this.customStyle['--paper-slider-pin-color'] = "#E53935";
             this.updateStyles();
             break;
           default:
-            this.customStyle['--paper-slider-active-color']="#43A047";
-            this.customStyle['--paper-slider-knob-color']="#43A047";
-            this.customStyle['--paper-slider-pin-color']="#43A047";
+            this.customStyle['--paper-slider-active-color'] = "#43A047";
+            this.customStyle['--paper-slider-knob-color'] = "#43A047";
+            this.customStyle['--paper-slider-pin-color'] = "#43A047";
             this.updateStyles();
             break;
         };
       },
-      _computeDanger:function(danger){
-        var dangerText="";
+
+      _computeDanger: function(danger) {
+        var dangerText = "";
         switch(danger){
           case 1:
-            this.customStyle['--danger-label-color']='#43A047';
+            this.customStyle['--danger-label-color'] = '#43A047';
             this.updateStyles();
             return "Low Risk";
             break;
           case 2:
-            this.customStyle['--danger-label-color']='#F57C00';
+            this.customStyle['--danger-label-color'] = '#F57C00';
             this.updateStyles();
             return "Medium Risk";
             break;
           case 3:
-            this.customStyle['--danger-label-color']='#E53935';
+            this.customStyle['--danger-label-color'] = '#E53935';
             this.updateStyles();
             return "High Risk";
             break;
           default:
-            this.customStyle['--danger-label-color']='#43A047';
+            this.customStyle['--danger-label-color'] = '#43A047';
             this.updateStyles();
             return "Not Set"
             break;
         };
       }
+
     });
 
   </script>
